# sample-browse

./: .gitignore  README.md  sample-browse.cabal  stack.yaml
app/: Main.hs
