name:                sample-browse
version:             0.1.0.0
synopsis:            A commandline sample browser.
-- description:
homepage:            https://github.com/rhofour/sample-browse#readme
license:             BSD3
license-file:        LICENSE
author:              rofer
maintainer:          rhofer@alumni.cmu.edu
copyright:           2017 Richard Alex Hofer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable sample-browse-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sample-browse
                     , brick >=0.26
                     , vty
                     , vector
                     , cmdargs
                     , microlens
                     , microlens-th
                     , directory
                     , sdl2
                     , sdl2-mixer
                     , filepath
  default-language:    Haskell2010

test-suite sample-browse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sample-browse
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rhofour/sample-browse
